# HomomorphicVoteTally

./: README.md  administrator.sh  electionKey.cpp  vote.cpp
Administrator/: README.md  administrator.sh  cleanup.sh  input.sign  rootCA.crt  rootCA.key
Counter/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  checksum.txt  cmake_install.cmake  counter  counter.cpp  counter_test  counter_test.cpp  electionSecretKeyFile.dat.enc  electionSecretKeyFile.txt  electionSecretKeyFile.txt.enc  inputCounter.sign  inputCounter.txt  recovered_pass.txt  recovered_password.txt  results1.txt  results2.txt  rootCA.crt  share1.sign  share1.txt  share2.sign  share2.txt  share3.sign  share3.txt  share4.sign  share4.txt  share5.sign  share5.txt
TallyOfficial/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  checksum.txt  cmake_install.cmake  conversion.txt  electionPublicKeyFile.sign  electionPublicKeyFile.txt  electionSecretKeyFile.txt  encryptedWeightsFile.sign  input.sign  results1.txt  results2.txt  rootCA.crt  tally  tally.cpp
Voter1/: electionPublicKeyFile.sign  input.sign  rootCA.crt  rootCA.srl  voter.sign  voter1.crt  voter1.crt.sign  voter1.csr  voter1.key  voter1.sign
Voter2/: electionPublicKeyFile.sign  input.sign  rootCA.crt  rootCA.srl  voter.sign  voter2.crt  voter2.crt.sign  voter2.csr  voter2.key  voter2.sign
Voter3/: electionPublicKeyFile.sign  input.sign  rootCA.crt  rootCA.srl  voter.sign  voter3.crt  voter3.crt.sign  voter3.csr  voter3.key  voter3.sign
Voter4/: electionPublicKeyFile.sign  rootCA.srl  voter4.crt  voter4.crt.sign  voter4.csr  (+2 more)
(+134 files in other folders)
